Added createdAt for body request
